sandbox/output
NormalNumberHandler.java:2: error: ';' expected
    public NormalNumberHandler(Handler handler) 
                                               ^
NormalNumberHandler.java:4: error: class, interface, or enum expected
}
^
2 errors
